Add --add-opens=java.base/java.nio=ALL-UNNAMED to avoid error